raspberry/services/livecamera/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
  selector:
    app: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  ports:
    - port: 80
      targetPort: 4000
      protocol: TCP
    - port: 31300
      targetPort: 31300
      nodePort: 31300
      protocol: UDP
    - port: 31301
      targetPort: 31301
      nodePort: 31301
      protocol: UDP
    - port: 31302
      targetPort: 31302
      nodePort: 31302
      protocol: UDP
    - port: 31303
      targetPort: 31303
      nodePort: 31303
      protocol: UDP
    - port: 31304
      targetPort: 31304
      nodePort: 31304
      protocol: UDP
    - port: 31305
      targetPort: 31305
      nodePort: 31305
      protocol: UDP
    - port: 31306
      targetPort: 31306
      nodePort: 31306
      protocol: UDP
    - port: 31307
      targetPort: 31307
      nodePort: 31307
      protocol: UDP
  type: NodePort
  selector:
    app: server
